To be 1.3 compliant and shoud work on 1.4 also.